Make filtering more immediate